SERVER-53739 Temporary code to validate all createIndexes options

Temporary fix to prevent createIndexes from creating invalid index catalog
entries, which would make listIndexes fail. The thorough fix will be in
SERVER-52539.